# Rovia-ADHD

./: .env.example  .gitignore  README.md
apps/api/: .env  .env.example  requirements.txt
apps/api/backend/: API.md
apps/desktop/: .env.example  .gitignore  package-lock.json  package.json
apps/desktop/sidecar/: .env.example  README.md  gateway.py  requirements.txt
apps/desktop/src/: preload.js
docs/: migration.md  project-structure-unified.md  runbook.md
docs/upstream-rovia/backend-reference/: .env.example  API.md  __init__.py
docs/upstream-rovia/desktop-docs/: adhd-folder-summary.md  backend-2-interface-assessment.md  backend-2-webped-integration-playbook.md  backend-interface-assessment-latest.md  backend-webped-adapter-status.md  roviagemini.md  (+9 more)
hardware/nienie/: nienie.ino
hardware/nienie_band/: nienie_band.ino
hardware/zclaw/: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  install.sh  package-lock.json  package.json  partitions.csv  sdkconfig.defaults  sdkconfig.esp32-t-relay.defaults  sdkconfig.esp32s3-box-3.defaults  sdkconfig.qemu.defaults  sdkconfig.secure  sdkconfig.test  weixin_bridge.mjs
hardware/zclaw/main/: CMakeLists.txt  Kconfig.projbuild  agent.c  agent.h  agent_commands.c  agent_commands.h  agent_prompt.c  agent_prompt.h  boot_guard.c  boot_guard.h  builtin_tools.def  channel.c  channel.h  config.h  cron.c  cron.h  cron_utils.c  cron_utils.h  gpio_policy.c  gpio_policy.h  hrv_server.c  hrv_server.h  http_gate.c  http_gate.h  json_util.c  json_util.h  llm.c  llm.h  llm_auth.c  llm_auth.h  local_admin.c  local_admin.h  main.c  memory.c  memory.h  memory_keys.c  memory_keys.h  messages.h  mqtt_uri_parse.c  mqtt_uri_parse.h  (+46 more)
(+230 files in other folders)
