idf_component_register(
    SRCS
        "main.c"
        "agent.c"
        "agent_commands.c"
        "agent_prompt.c"
        "channel.c"
        "local_admin.c"
        "llm.c"
        "llm_auth.c"
        "http_gate.c"
        "tools.c"
        "tools_common.c"
        "gpio_policy.c"
        "tools_gpio.c"
        "tools_i2c.c"
        "tools_dht.c"
        "tools_memory.c"
        "tools_persona.c"
        "tools_cron.c"
        "tools_system.c"
        "tools_supabase.c"
        "memory.c"
        "json_util.c"
        "telegram.c"
        "telegram_http_diag.c"
        "telegram_poll_policy.c"
        "telegram_targets.c"
        "telegram_chat_ids.c"
        "telegram_token.c"
        "cron.c"
        "memory_keys.c"
        "telegram_update.c"
        "text_buffer.c"
        "security.c"
        "cron_utils.c"
        "ratelimit.c"
        "ota.c"
        "boot_guard.c"
        "user_tools.c"
        "wifi_credentials.c"
        "tools_imu.c"
        "weixin_mqtt.c"
    INCLUDE_DIRS "."
    REQUIRES
        nvs_flash
        esp_wifi
        esp_http_client
        esp_http_server
        esp_netif
        esp-tls
        esp_timer
        json
        driver
        lwip
        esp_driver_usb_serial_jtag
        app_update
        mqtt
)

target_link_libraries(${COMPONENT_LIB} PRIVATE m)

set(ZCLAW_RELEASE_VERSION "dev")
if(DEFINED PROJECT_VER AND NOT PROJECT_VER STREQUAL "")
    set(ZCLAW_RELEASE_VERSION "${PROJECT_VER}")
endif()
target_compile_definitions(${COMPONENT_LIB} PRIVATE ZCLAW_VERSION="${ZCLAW_RELEASE_VERSION}")
